--- a/index.html
+++ b/index.html
@@ -10,6 +10,9 @@
     <footer>
       <input type="text" id="top-line" placeholder="Top line">
       <input type="text" id="bottom-line" placeholder="Bottom line" />
+      <input type="file" id="file" />
+      <button id="saveBtn">Save Meme</button>
+
     </footer>
     <script src="js/app.js"></script>
   </body>
