--- a/index.html
+++ b/index.html
@@ -6,14 +6,11 @@
     <link rel="stylesheet" href="styles/main.css" />
   </head>
   <body>
-    <canvas id="c" width="500" height="500"></canvas>
-    <footer>
+  <canvas id="c"></canvas>
       <input type="text" id="top-line" placeholder="Top line">
       <input type="text" id="bottom-line" placeholder="Bottom line" />
       <input type="file" id="file" />
       <button id="saveBtn">Save Meme</button>
-
-    </footer>
     <script src="js/app.js"></script>
   </body>
 </html>
